--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <br /> 
          <button class="SUBMIT">SUBMIT</button>
         </form>
-        <p class="loogin-link">
+        <p class="login-link">
             Already have an account? <a href="#">Login here</a>
         </p>
     </div>
