--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTP-8">
     <meta name="viewport" content="width=device-width, initial-scaler=1.0">
     <title>Sign UP NOW</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
